<resources>
    <string name="app_name">Emotions Quiz for Autism</string>
    <string name="smiley">A blue smiley face.</string>
    <string name="smiley2">A boy holding his knees with mouth turned down.</string>
    <string name="smiley3">A girl with crossed arms, a screwed up face and low eyebrows.</string>
    <string name="smiley4">A baby with wide eyes, sucking on his bottom lip.</string>
    <string name="smiley5">A man with a wide-mouthed smile and wide-open eyes.</string>
    <string name="smiley6">A woman with eyebrows close together and down-turned eyes holding a piece of paper with a smile on it in front of her mouth.</string>
    <string name="question_one">Question One</string>
    <string name="question_two">Question Two</string>
    <string name="question_three">Question Three</string>
    <string name="question_four">Question Four</string>
    <string name="question_five">Question Five</string>
    <string name="question_six">Question Six</string>
    <string name="question_seven">Question Seven</string>
    <string name="how_feeling">How is this person feeling?</string>
    <string name="two_emotions">Select two emotions</string>
    <string name="type_emotions">Type how they are feeling…</string>
    <string name="take_photo">Take a photo of yourself looking happy</string>
    <string name="check_if_happy">Adult: Click here if the photo is correct</string>
    <string name="happy_or_sad">happy or sad</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="scared">Scared</string>
    <string name="excited">Excited</string>
    <string name="total">Total</string>
    <string name="total_string">Well Done! You scored: %1$o</string>

    <string-array name="emotions_array">
        <item>Select one</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Angry</item>
        <item>Scared</item>
        <item>Excited</item>
    </string-array>
</resources>
